Add all quotes to data file and randomly display one

--- a/data/quotes.yaml
+++ b/data/quotes.yaml
@@ -1,6 +1,28 @@
 - author: "Karol Kiszka"
-  quote: "Jestem zachwycony, strasznie bałem się wizyty u weterynarza, ale miło sympatycznie, z myślą o pupilu :) Jestem zachwycony podejściem i profesjonalizmem!! Polecam :)"
+  content: "Jestem zachwycony, strasznie bałem się wizyty u weterynarza, ale miło sympatycznie, z myślą o pupilu :) Jestem zachwycony podejściem i profesjonalizmem!! Polecam :)"
 - author: "Jarek Banicki"
-  quote: "Zawsze profesjonalne i indywidualne podejście do zwierząt, Pan Grzeszczuk, Kamiński i Rutka to lekarze z powołania i to się czuje. Moje psy leczę od lat wyłącznie u nich."
+  content: "Zawsze profesjonalne i indywidualne podejście do zwierząt, Pan Grzeszczuk, Kamiński i Rutka to lekarze z powołania i to się czuje. Moje psy leczę od lat wyłącznie u nich."
 - author: "Magdalena M."
-  quote: "Chciałabym podziękować za fachową opiekę nad naszą Nutką. Szczególne podziękowania dla p. Grzeszczuka i p. Kamińskiego za poświęcony czas, za ciepło i serce jakie wkładali by ratować naszą psinkę. Polecam gorąco tę przychodnię i tych wspaniałych, tam pracujących, lekarzy! Dziekuję z całego serca."
+  content: "Chciałabym podziękować za fachową opiekę nad naszą Nutką. Szczególne podziękowania dla p. Grzeszczuka i p. Kamińskiego za poświęcony czas, za ciepło i serce jakie wkładali by ratować naszą psinkę. Polecam gorąco tę przychodnię i tych wspaniałych, tam pracujących, lekarzy! Dziekuję z całego serca."
+- author: "Bogdanka"
+  content: "Witam. Jestem bardzo zadowolona z opieki tej właśnie przychodni dla zwierząt. Korzystam z miej od ok. 1994 r. Teraz kiedy tylko potrzebuje ponieważ nie mieszkam w Polsce zawsze dzwonię tylko do Nich:) I nigdy sie nie zawiodłam. Serdecznie polecam i cieszę się że mamy w Tychach tak świetnych Weterynarzy. Pozdrawiam."
+- author: "Daria Płocharczyk"
+  content: "Z pełnym zaangażowaniem, od razu widać, że lekarzom zależy na wyleczeniu pacjenta, a nie na zarobku. Ciepłe podejście do zwierząt, profesjonalne wytłumaczenie problemu właścicielowi. Znają się nie tylko na psach i kotach, lecz również na gryzoniach. Jestem bardzo zadowolona z lekarzy tu pracujących i w przyszłości nie zastanowię się nad odwiedzeniem tej właśnie przychodni. W 100% polecam!"
+- author: "Irena"
+  content: "Bardzo profesjonalnie a jednocześnie ciepło i życzliwie. Co istotne, można tak powiedzieć o wszystkich lekarzach tej przychodni.Zero komercji za to miłość i szacunek dla zwierząt widać na każdym kroku. Korzystam z usług tej przychodni od wielu lat i nigdy się nie zawiodłam."
+- author: "Dominika"
+  content: "Polecam tę fachową lecznicę z pełnym przekonaniem! :)) Wizytuję tu już od blisko 20 lat. Czasem trzeba trochę posiedzieć w poczekalni, ale za to panowie mają dużo czasu i zaangażowania dla każdego pacjenta, co mi się podoba najbardziej!!! :))) Pozdrowienia i podziękowania dla p. Kamińskiego i p. Grzeszczuka :)"
+- author: "Ewa"
+  content: "Profesjonalnie, rzeczowo, ale ciepło. Szybko, ale dokładnie. I, choć cena nie gra roli - to wcale nie drogo. Polecam!!!"
+- author: "Ola"
+  content: "Byłam już w kilku poradniach weterynaryjnych, ale jak jest szybka awaria z kotem, intuicyjnie pędzę tu. Fachowa ekipa i porządny sprzęt, decyzje o jego wykorzystaniu zapadają natychmiast (jest problem? Od razu USG i sprawdzamy, o co chodzi). Już raz mi tu kota przywrócili z powrotem do żywych. Szczególnie polecam p. Bogusława - bez względu na długość oczekującej kolejki kudłatych pacjentów zajmie się zwierzęciem troskliwie, poświęcając mu odpowiednio dużo czasu i zainteresowania. Ciepła, życzliwa osoba z prawdziwym powołaniem!"
+- author: "Aleksandra Witwicka"
+  content: "Polecam tę przychodnię. Choć pozwoliłam Cookiemu odejść, wiedziałam, że Ci lekarze byliby w stanie o niego walczyć do końca. Nigdy nie widziałam tak profesjonalnej opieki, troski i dbania o zwierzęta jaką znalazłam tam. Na pierwszym miejscu są tam zwierzęta, a nie portfele właścicieli. I jeśli kiedykolwiek będę szła z jakimś swoim pupilem do weterynarza to pójdę tylko do tej przychodni."
+- author: "Asia"
+  content: "Polecam serdecznie Przychodnię Weterynaryjną Vet-Med, gdyż pracują w niej doskonali specjaliści, którzy są fachowcami w swojej dziedzinie, o czym przekonałam się ja i mój pies Cziko."
+- author: "Ewelina"
+  content: "Bardzo polecam tę przychodnię, korzystam z usług od ładnych paru lat i wszystkie moje psiaki były tu leczone, mam pełne zaufanie szczególnie do pana Bogusława Grzeszczuka, jest świetnym lekarzem od którego zawsze bije ciepłe uczucie do zwierząt, niesamowicie pozytywna osoba i bardzo fachowo podchodzi do wszystkich kwestii, serdecznie polecam."
+- author: "Urszula Pakosz"
+  content: "Chciałabym tą drogą podziękować Lekarzom tej przychodni za bardzo fachową opiekę nad moim pupilkiem Mucką i za udana operację."
+- author: "Natalia Mordoń"
+  content: "Jestem szczęśliwą właścicielką 7. miesięcznego pieska, który dzięki pomocy lekarza weterynarii Wiesława Rutki został szybko zdiagnozowany i wyleczony. Teraz szczęśliwie biega i cieszy się życiem dzięki pomocy, która została mu okazana. Bardzo serdecznie polecam ten gabinet weterynaryjny, ponieważ mają bardzo miłych lekarzy, którzy są przyjaciółmi zwierząt i starają się jak tylko mogą, aby pomóc chorym i bezbronnym zwierzątkom."
